--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 
 <body>
     <div class="container">
-        <!-- <h1>I am omlan</h1> -->
+
+        <div class="input-field">
+            <div class="input">
+                <label for="size">Enter The size of the grid:</label>
+                <input type="number" class="input-box" min="1" max="100">
+            </div>
+            <button class="btn-clear">Clear Grid</button>
+        </div>
+
         <div class="square-box">
 
         </div>
